--- a/scriptnet/competitions/templates/competitions/submit.html
+++ b/scriptnet/competitions/templates/competitions/submit.html
@@ -22,6 +22,6 @@
 {% endbuttons %}
 </form>					
 {% else %}
-<br><br><center><h4> {% trans "You have to" %} <a href="{% url 'competition' %}#login">{% trans "login </a> first" %}. </h4></center>
+<br><br><center><h4> {% trans "You have to" %} <a href="{% url 'index' %}#login">{% trans "login </a> first" %}. </h4></center>
 {% endif %}
 {% endblock %}
