--- a/scriptnet/competitions/templates/competitions/master.html
+++ b/scriptnet/competitions/templates/competitions/master.html
@@ -176,21 +176,23 @@ Nam qualitates corporum non nisi per experimenta innotescunt, ideoque generales 
             <div class="row no-gutter">
 				{% if competitions %}
 				{% for c in competitions %}
-                <div class="col-lg-3 col-sm-6 text-center">
-                    <a href="{% url 'competition' competition_id=c.id %}" class="portfolio-box">
+    			<div class="row">
+    				<div class="col-lg-5"></div>                
+    				<div class="col-lg-1">
+                        {% if c.avatar %}
+                        <img src="{{ c.avatar.url }}" class="img-responsive" alt="">
+                        {% else %}
                         <img src="{% static 'img/nicesamples/1.jpg' %}" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    
-                                </div>
-                                <div class="project-name">
-                                    {{ c.name }}
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+                        {% endif %}                                                          
+	    			</div>
+                    <div class="col-lg-1">
+                        <a href="{% url 'competition' competition_id=c.id %}">                    
+                    			Competition {{ c.id }}: {{ c.name }}
+                        </a>                            
+    				</div>
+    				<div class="col-lg-5"></div>                
+    			</div>
+                <br>                
 				{% endfor %}
 				{% else %}
 				<p> {% trans "*No competitions are currently active*" %}
