--- a/scriptnet/competitions/templates/competitions/master.html
+++ b/scriptnet/competitions/templates/competitions/master.html
@@ -155,7 +155,7 @@ Nam qualitates corporum non nisi per experimenta innotescunt, ideoque generales 
 			</p>
                 </div>
 		<div class="col-lg-4">
-		    <img src="{% static 'img/nicesamples/1.jpg' %}" class="img-responsive" alt="">
+		    <img src="{% static 'img/nicesamples/1.original.jpg' %}" class="img-responsive" alt="">
 		</div>
             </div>
         </div>
