--- a/scriptnet/competitions/templates/competitions/competition.html
+++ b/scriptnet/competitions/templates/competitions/competition.html
@@ -69,7 +69,13 @@
 			        </li>
 			        {% for tr in competition.track_set.all %}
                 <li class="dropdown" id="t1{{ tr.percomp_uniqueid }}">
-                  <a href="{% url 'competition' competition_id=competition.id track_id=tr.percomp_uniqueid %}" style="display:inline-block;padding-right:0px;">{% trans "Track" %} {{ tr.percomp_uniqueid }}</a>
+                  <a href="{% url 'competition' competition_id=competition.id track_id=tr.percomp_uniqueid %}" style="display:inline-block;padding-right:0px;">
+                      {% if competition.track_set.count == 1 %}
+                      {% trans "Participate in competition" %}
+                      {% else %}
+                      {% trans "Track" %} {{ tr.percomp_uniqueid }}
+                      {% endif %}
+                  </a>
                   <a class="dropdown-toggle" data-toggle="dropdown" href="#subtracks"  style="display:inline-block;padding-left:0px;">
                     <b class="caret"></b> <!-- This caret shows a wrong url sometimes, but probably doesnt matter -->
                   </a>
