--- a/scriptnet/competitions/templates/competitions/competition.html
+++ b/scriptnet/competitions/templates/competitions/competition.html
@@ -48,7 +48,7 @@
     <section id="main">
     <div class="container">
         <div class="row">
-            <div class="col-lg-10">
+            <div class="col-lg-10 col-md-10">
                 <h1>{{ competition.name }}</h1>
                 <p class="lead">
             {% block content %}                                        
@@ -60,6 +60,17 @@
             {% endblock %}
                 </p>
             </div>
+            <div class="col-lg-2 col-md-2">
+                <div class="well">
+                    <h4>{% trans "News" %}</h4>
+				          	{{ competition.newsfeed | safe }}
+                </div>
+
+                <div class="well">
+                    <h4>{% trans "Important Dates" %}</h4>
+				          	{{ competition.important_dates | safe }}
+                </div>
+            </div>            
         </div>    
     </div>        
     </section>
