--- a/scriptnet/competitions/templates/competitions/viewresults.html
+++ b/scriptnet/competitions/templates/competitions/viewresults.html
@@ -10,13 +10,15 @@
 
 {% block content %}
 <h3>{% trans "All submissions and results for " %}
-    {% if not track %}
+    {% if not track or competition.track_set.all.count == 1 %}
     {% trans "the" %} {{ competition.name }}
     {% else %} 
         {% if not subtrack %}
-        {% trans "all subtracks of the " %} [{{ track.percomp_uniqueid }}]{{ track.name }} {% trans "track" %}
+            {% trans "all subtracks of " %} {% trans "track" %} [{{ track.percomp_uniqueid }}]{{ track.name }}
+        {% elif track and track.subtrack_set.all.count == 1 %}
+            {% trans "track" %}[{{ track.percomp_uniqueid }}]{{ track.name }}
         {% else %}
-        {% trans "the " %} [{{ track.percomp_uniqueid }}.{{ subtrack.pertrack_uniqueid }}]{{ track.name }}/{{ subtrack.name }} {% trans "track/subtrack" %}
+            {% trans "subtrack" %} [{{ track.percomp_uniqueid }}.{{ subtrack.pertrack_uniqueid }}]{{ track.name }}/{{ subtrack.name }}
         {% endif %}
     {% endif %}
 </h3>
